--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -4,7 +4,14 @@ Vamos a escribir el código necesario y posteriormente a llevarlo a la página d
 1. Escribe un ¡Hola Mundo! en Java
      
      Escribe aqui tu código
-     
+     /* Mi Primer programa
+     */
+     clss Hola Mundo
+     // contenido den tro de la clase
+     publico static void main(string[]org) }
+     systema.out println ( "¡Hola Mundo!);
+    }
+    }
 2. Realiza un programa que realice las 4 operaciones básicas(suma, resta, división y multplicación) en Java e imprima los resultados
 
     Escribe aqui tu código
