--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -15,6 +15,10 @@ Vamos a escribir el código necesario y posteriormente a llevarlo a la página d
 2. Realiza un programa que realice las 4 operaciones básicas(suma, resta, división y multplicación) en Java e imprima los resultados
 
     Escribe aqui tu código
+    public static operaciones{
+    public static void main[]( strinting) args)
+    string nombre= "suma";
+    
     
 3. Ingresando cuatro notas de un alumno imprime su promedio con su nombre.
 
