--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -23,5 +23,9 @@ Vamos a escribir el código necesario y posteriormente a llevarlo a la página d
 3. Ingresando cuatro notas de un alumno imprime su promedio con su nombre.
 
     Escribe aqui tu código
+    Public class calificasiones{
+    public static void main(string[] arg {}
+    string nombre;Alberto
+    Int colif=-
     
  4. Calcular el porcentaje que debe pagar un cliente, en la compra de una motocicleta a plazos en un periodo de 6 meses, si el interés mensual progresivo es de 3.5 % .
